--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,3 @@
-# This file lists all individuals having contributed content to the repository.
+# This file lists all individuals having contributed content to the repository
 
-
-Janeth Oluebube Eni <enijaneth@gmail,com>
-Anitah Aturinda <anitaizzy4@gmail.com>
+Maria Nalukwago <mariatendo80@gmail.com>
